# web_design_course

./: .gitignore
address_homework/: .env  Makefile  index.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
address_homework/config/: config.json
address_homework/controllers/: AddressController.ts
address_homework/database/: sequelize.ts
address_homework/migrations/: 20230529180104-addAddressTable.js  20230529230933-agregarApellidos.js
address_homework/models/: Address.ts
address_homework/prisma/: schema.prisma  seed.ts
address_homework/routes/: address.ts  index.ts
address_homework/seeders/: 20230529180409-seedInitAddress.js
address_homework/src/: index.ts
address_homework/src/routes/: address.ts
address_homework/static/: style.css
address_homework/views/: home.hbs
address_homework/views/address/: addressEdit.hbs  addressIndex.hbs  create.hbs  edit.hbs  index.hbs
address_homework/views/layouts/: main.hbs
address_homework/views/partials/: Column.hbs  InputField.hbs  RowTitle.hbs
blog_ssr/: Cargo.toml  Makefile  package-lock.json  package.json  rocket.toml  tailwind.config.js  tsconfig.json
blog_ssr/prisma/: schema.prisma
blog_ssr/prisma-cli/: Cargo.toml
blog_ssr/public/: output.css
blog_ssr/src/: main.rs
blog_ssr/src/handlebars_helpers/: mod.rs
blog_ssr/src/routes/: auth.rs  index.rs
blog_ssr/src/views/: layout.html.hbs
blog_ssr/src/views/HomeScreen/: HomeScreen.html.hbs  hello.html.tera
blog_ssr/src/views/HomeScreen/components/: dropDown.html.hbs  leftColumn.html.hbs  rightColumn.html.hbs
blog_ssr/src/views/SignUp/: SignUp.html.hbs
blog_ssr/src/views/login/: Login.html.hbs  Login2.html.hbs
blog_ssr/typescriptSrc/: firebase.ts  output.css  signupForm.ts
blog_ssr/views/: layout.html.hbs
blog_ssr/views/HomeScreen/: HomeScreen.html.hbs  interactivity.js
blog_ssr/views/indexPage/: component.html.hbs  index.html.hbs
blog_ssr/views/login/: Login.html.hbs
creacion_base_de_datos_direcciones/: package-lock.json  package.json
hello_salvo/: .env  .gitignore  Cargo.toml  askama.toml  package-lock.json  package.json  snowpack.config.js  tailwind.config.js
hello_salvo/jsSrc/: defaultLinkTransformation.js  firebase.js  signIn.js  signupForm.js
hello_salvo/prisma-cli/: Cargo.toml
hello_salvo/src/: main.rs
hello_salvo/src/controllers/: articles.rs  auth.rs  home_screen.rs  mod.rs
hello_salvo/src/helpers/: mod.rs
hello_salvo/src/prisma/: prisma.rs  schema.prisma
hello_salvo/src/views/: CreateArticlesLogged.hbs  HomeScreen.hbs  Login.hbs
hello_salvo/src/views/Layout/: Main.hbs
hello_salvo/src/views/SignUp/: SignUp.hbs
hello_salvo/src/views/login/: Login.hbs
visitas_primitivo/: package-lock.json  package.json  visitas.txt
visitas_primitivo/src/: index.html  main.ts
(+1 files in other folders)
