[package]
name = "ssr_post_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = {version ="4.3.7", features=["dir_source"]}
lazy_static = "1.4.0"
salvo = {version ="*", features = ["logging", "serve-static", "anyhow", "jwt-auth"]}
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
async_once = "0.2.6"
jsonwebtokens = "1"



[workspace]
members = [
    "prisma-cli",
]
